
1.6 ...
	ENHANCEMENTS
        check_mailq now supports auto detection of qmail, postfix, exim and nullmailer with
          fallback to sendmail
	check_ide_smart now defaults to plugin output, original output appended with -v
	Extra-Opts are now enabled by default
	check_swap now supports a configurable state when there is no swap

	FIXES
	Don't let e.g. check_http's -C option reset SSL version if e.g. -S 1 -C 5 is specified
	check_ide_smart could disable offline auto tests but could not re-enable them.
	  For this reason all SMART command modes have been disabled.
	check_dig: fix wrong IPv6 arguments order (Stéphane Bortzmeyer)

	WARNINGS
	check_procs now ignores its parent process to avoid unexpected results when invoked via certain shells
	utils.sh no longer defines ECH
	check_ide_smart -q/--quiet and -n/--nagios (Nagios-compatile output) are now deprecated
	  but accepted for backward-compatibility
	check_ide_smart -0/--auto-off, -1/--auto-on and -i/--immediate: options have
	  been disabled because they were broken
	State retention: the NAGIOS_PLUGIN_STATE_DIRECTORY environment variable has been
	  renamed MP_STATE_PATH. The old variable will continue to work in v1.6.x
	Add the UID of the invoking user to the state retention file path. This helps solving
	  permission issues when different users run the same plugin
	check_swap used to allow returning OK on a system without swap when only percent thresholds
	  were used. This is no longer the case and one must now use -n/--no-swap=<state>
	The Perl and Shell plugins now use the PATH specified via ./configure's --trusted-path
	  option, or "/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin" by default

1.5 2nd October 2013
	ENHANCEMENTS
	New check_dbi plugin for checking an (SQL) database using DBI
	Let OpenSSL load its configuration file (see the OPENSSL_config(3) man page)
	Add performance data to check_apt
	Add performance data to check_procs
	Added -4/-6 options to check_dig (Ville Mattila)